2003-02-23  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*: added Japanese translations by
				KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* help/ja/Makefile.am:  added ja into SUBDIRS.

2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* logview.c: Fix leak.
	
2003-02-11  Glynn Foster  <glynn.foster@sun.com>

	* logview.c, monitor.c: Mark some strings for translation.
	Thanks to Maxim for pointing this out. Fixes #104541.

2003-01-24  Glynn Foster  <glynn.foster@sun.com>

	* help/C/figures/syslog_window.png:
	* help/C/gnome-system-log-C.omf:
	* help/C/gnome-system-log.xml: Updates from the sun docs
	people for 2.2

2002-01-07 Dennis Cranston <dennis_cranston@yahoo.com>

	* pixmaps/Makefile.am:  removed logview.xpm reference from 
	pixmaps_DATA & EXTRA_DIST.

	* pixmaps/logview.xpm:  remove file
	
2002-12-28 Alex Duggan <aldug@gnome.org>
	
	* about.c: use the standard gnome-log icon in the about
	dialog not the ancient GNOME one, Fixes #102773
	
2002-12-28 John Fleck <jfleck@inkstain.net>

	* info.c, zoom.c
	removing extraneous translation marks from a bunch of
	%s, fixing #101764

2002-12-21 Alex Duggan <aldug@gnome.org>

	* about.c: fix spacing in about dialog 

2002-12-21 John Fleck <jfleck@inkstain.net>

	* remove help/C/logview.xml logview-C.omf
	no longer used

2002-12-02  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log.desktop.in: Update for StartupNotify

2002-11-29  Fernando Herrera <fherrera@onirica.com>

       * gnome-system-log.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-20  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c: (InitPages), logrtns.c: Crufty code - 
	make it less crufty. Fixes #99047.
	* logview.schemas.in: Dunno why I called it 'logview'. Oh well.

2002-11-07  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: (SetDefaultUserPrefs): Add /var/log/sys.log to 
	list of possible logs to open. Apply duct tape to bug that
	I don't have time to look at.

2002-10-17  Kjartan Maraas  <kmaraas@gnome.org>
