@@ -1,3 +1,7 @@
+2003-05-24  Glynn Foster  <glynn.foster@sun.com>
+
+	* logrtns.c, log_repaint.c: Merging fixes from HEAD.
+
 2003-02-23  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* help/ja/*: added Japanese translations by
